get top popular games by modlists
